deployment.yaml
#Creates a deployment with name graphql, it uses the 
#image pushed in GCR. Also a service account 'ro-istio-rbac'
#is attached and hence the pod will only have read
#only access for pods and services with Istio's rbac to access 
#the express service. The container listens on port 4000
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: graphql
  name: graphql
  namespace: palo-alto-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      serviceAccount: ro-istio-rbac
      containers:
      - image: gcr.io/palo-alto-networks-234507/cicd/graphql:${env.BUILD_NUMBER}
        name: graphql
        imagePullPolicy: Always
        ports:
        - containerPort: 4000

---
#Creates a deployment with name express, it uses the 
#image pushed in GCR. Also a service account 'ro-serviceaccount' 
#is attached and hence the pod will only have read only access 
#for pods and services. The container listens on port 3000
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: express
  name: express
  namespace: palo-alto-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      serviceAccount: ro-serviceaccount
      containers:
      - image: gcr.io/palo-alto-networks-234507/cicd/express:${env.BUILD_NUMBER}
        name: express
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
#Create a service to redirects the traffic from port 4000
#to graphql's port 4000
kind: Service
apiVersion: v1
metadata:
  name: graphql
  namespace: palo-alto-demo
  labels:
    app: graphql
spec:
  selector:
    app: graphql
  ports:
  - port: 4000
    name: http
    targetPort: 4000
  type: ClusterIP
---
#Create a service to redirect the traffic from port 3000
#to express port 3000
kind: Service
apiVersion: v1
metadata:
  name: express
  namespace: palo-alto-demo
  labels:
    app: express
spec:
  selector:
    app: express
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  type: ClusterIP

---
#Create a gateway listening on port 443
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-ilb
  namespace: palo-alto-demo
spec:
  selector:
    istio: ilbgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: https
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      serverCertificate: /etc/tls.crt
      privateKey: /etc/tls.key
---
#Redirect '/graphql' endpoint from the
#gateway to graphql service on port 4000
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graphql-vs
  namespace: palo-alto-demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway-ilb
  http:
  - match:
    - uri:
        exact: /graphql
    route:
    - destination:
        host: graphql
        port:
          number: 4000
---
#Route every request for host graphql to 
#follow ISTIO_MUTUAL tls mode
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: graphql-destination
  namespace: palo-alto-demo
spec:
  host: graphql
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
---
#open port https 443 in istio ingress internal loadbalancer
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ilbgateway
  name: istio-ilbgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
